Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34850

Unable to create backup with mariabackup: try increasing innodb_log_file_size

    XMLWordPrintable

Details

    Description

      I am running a huge database of about 3TB of data with MariaDB 10.11.9 on a mirrored ZFS vdev with SSDs.

      Whenever I try to use Mariabackup with this database, it fails near the end with a message like:

      mariabackup --target-dir=/mnt/ --slave-info --backup
      ...
      [00] FATAL ERROR: [timestamp] Was only able to copy log from 148582842890306 to 148638022288286, not 148676138598341; try increasing innodb_log_file_size

      The innodb_log_file_size is 32GB; I even tried 128GB, but it does not fix the problem.

      Some time after Mariabackup starts, it repeatedly complains until the end with the same message:

      Retrying read of log at LSN=148638022288286

      The backuptarget has plenty of space free.

      I increased innodb_log_file_size and tried this on three different slave-servers (all handle about 1TB to 3TB data) with the very same result. After a few hours of mariabackup-runtime, the backup fails with this error message.

      The expectation is, that the backup should finishes successfully.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              Marhesh Marhesh
              Votes:
              1 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.